# C-2021-01_Alexey_Komarov

./: README.md
hw01/: .gitignore  Makefile  README.md  cp866.txt  main.c  utf8_encoder
hw02/: .gitignore  Makefile  README.md  jpeg_zip_detector  main.c  sign.h
hw04/: main.c
hw05/: .gitignore  Makefile  README.md  main.c  mylog.c  mylog.h
hw06/: README.md  clib-package.c.patch
hw07/: .gitignore  Makefile  README.md  fsize_info  fsize_info.conf  main.c  mytest.txt  tcp_serv.c  tcp_serv.h  test_tcp.sh  test_unix.sh  unix_serv.c  unix_serv.h
hw08/: .gitignore  Makefile  README.md  ftp.c  ftp.h  main.c
hw09/: .gitignore  Makefile  README.md  crc32_calc.h  main.c
hw10/: .gitignore  Makefile  README.md  main.c
hw11/: .gitignore  Makefile  README.md  http.c  http.h  main.c
hw11/root_dir/: index.html
hw12/: .gitignore  Makefile  README.md  main.c
hw13/: .gitignore  Makefile  README.md  main.c
hw14/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
hw14/include/: collision.h  common.h  draw.h  main.h
hw14/src/: ball.c  collision.c  draw.c  frames.c  init.c  input.c  main.c  sound.c  stage.c  util.c
project/: .gitignore  Makefile  README.md  common.h  config.c  main.c
project/example/: .gitignore  main.c  rbuilder.conf
project/example_project/: Makefile  README.md  rbuilder.conf
